[package]
name = "hello"
version = "0.1.0"
authors = ["Alice Reuter <pwn@alicereuter.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlite = "0.25.0"
rocket = "0.4.2"
rocket_contrib ="0.4.2"
serde = { version = "1.0.99", features = ["derive"] }